jellyfin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jellyfin
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
  name: jellyfin
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
        app.kubernetes.io/name: jellyfin
    spec:
      containers:
      - image: jellyfin/jellyfin
        imagePullPolicy: Always
        name: jellyfin
        resources:
          limits:
            gpu.intel.com/i915: "1" # requesting 1 GPU
        ports:
        - containerPort: 8096
          name: web
          protocol: TCP
        volumeMounts:
        - mountPath: "/media/hdd0/media"
          readOnly: false
          name: smb
        - mountPath: "/config"
          readOnly: false
          name: config
      volumes:
        - name: smb
          persistentVolumeClaim:
            claimName: pvc-jellyfin-media-smb
        - name: config
          persistentVolumeClaim:
            claimName: pvc-jellyfin-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jellyfin
  name: jellyfin
  namespace: jellyfin
spec:
  ports:
  - name: web-tcp
    port: 8096
    protocol: TCP
    targetPort: 8096
  - name: web-udp
    port: 8096
    protocol: UDP
    targetPort: 8096
  selector:
    app: jellyfin
