jellyfin/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: jellyfin
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.santos.party`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
      middlewares:
        - name: default-headers
  tls:
    secretName: santos-party-tls
